
    env RRD_LOCKING=block rrdupdate ...

  or

    rrdupdate --locking none ...

  or

  rrd_updatex_r(filename, tmplt, RRD_FLAGS_LOCKING_MODE_BLOCK, ...);

* Add (remote) dump support to rrdcached <Tobias Hintze>

* Constify argv argument to library functions
  Without this users of library function that want to pass in const strings need to duplicate them to avoid compiler warnings

RRDtool 1.8.0 - 2022-03-13
==========================

Bugfixes
--------
* python bindings: properly convert double values of rrd info <Stefan Gluszek>
* failed to expand 'Py_UNUSED', Invalid usage when expanding  'Py_UNUSED' <c72578>
* document --showtime in xport help output <c72578>
* fix --use-nan-for-all-missing-data <c72578>
* update rrdruby.pod <c72578>
* add missing rrdruby.pod and rrdpython.pod to dist <c72578>
* Set first_weekday to 0 (Sunday), when HAVE__NL_TIME_WEEK_1STDAY is not defined <nirgal>
* fix median calculation for all NaN inputs <c72578>
* fix potential leak in xport during failure <c72578>
* fix many warnings raised by Cppcheck <c72578>
* fix many compiler warnings from latest gcc <c72578>
* ensure proper initialization in rrd_daemon <clarfonthey>
* cleanup testsuite <nirgal>
* better testing <c72578>
* avoid invalid read in rrd_client <pallas>
* add symbols from rrdc to librrd <pallas>
* Fix duplicate write_changes_to_disk() calls when HAVE_LIBRADOS is true and HAVE_MMAP is false <yil-cpr>
* documentation updates <nirgal>
* for SMIN example in docs <Thomas-Gelf>
* fix for pyton3 compatibility <SuperHeron>
* freemem only for valid status <Christian Kr"oger>
* fix double meaning of time 0 as uninitialized value <neirbowj>
* fix for zfs not supporting fallocate. this makes resize work on zfs <zelsing>
* add rrdrados.pod to dist <Jeron Roovers>
* fetch - do not call rrd_freemem on uninitialized pointers <commx>
* use separate pango fontmap per thread <nomis>
* switch to python 3 <nirgal>
* do not leak filename when opening a broken file <mistotebe>